# angavu-intelligence-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  .trufflehogignore  API.md  ARCHITECTURE_MAPPING.md  ARCHITECTURE_VALIDATION.md  AUTH_FIXES.md  BACKEND_TEST_REPORT.md  CHANGELOG.md  DEEP_TECHNICAL_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_ORACLE.md  DESIGN_BACKEND_LANGUAGE_TRAINING.md  Dockerfile  Dockerfile.oracle  HARNESS_RESEARCH.md  ICON_REDESIGN.md  INTEGRATION_FIXES.md  INTELLIGENCE_PIPELINE_VALIDATION.md  README.md  RESEARCH_MULTI_LANGUAGE_ADAPTIVE_LEARNING.md  SKILL.md  STRATEGY.md  alembic.ini  degree-integration-driver.md  deploy.sh  docker-compose.oracle.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  release.yml  rust-ci.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: __init__.py  config.py  exceptions.py  main.py  worker.py
app/agents/: __init__.py  base.py  base_agent.py  base_events.py  base_protocols.py  circuit_breaker_governance.py  context_manager.py  cost_tracker.py  error_compactor.py  event_bus.py  factory.py  harness.py  hybrid_router.py  implementations.py  implementations_extra.py  intelligence_pipeline.py  knowledge_sharing.py  long_horizon.py  loop_implementations.py  meta_agent.py  observability.py  pipeline_agents.py  pipeline_core.py  pipeline_data.py  pipeline_intelligence.py  pipeline_planners.py  progressive_autonomy.py  reflexion.py  research_flow.py  self_evaluation.py  self_evaluation_config.py  skill_generator.py  subagent.py  task_decomposition.py  unified_state.py
app/api/: __init__.py  agent_loops.py  agent_router.py  analysis.py  auth.py  biashara_sync.py  channel_health.py  dashboard.py  deployment.py  dialect_dictionary.py  evolution.py  explain.py  federated_learning.py  fl_aggregator.py  fmcg.py  formal_reports.py  harness.py  infrastructure.py  infrastructure_v2.py  intelligence.py  intelligence_products.py  long_horizon.py  model_router.py  onboarding.py  otp_auth.py  phase1_intelligence.py  reports.py  skills.py  stickiness.py  sync.py  trigger_router.py  whatsapp.py  worker_features.py
app/autonomous/: __init__.py  config.py  dashboard.py  escalation.py  feedback.py  learning.py  monitoring.py  orchestrator.py  reflexion.py  repository.py
app/biashara_tools/: __init__.py  alama_score.py  distribution_gap.py  fmcg_intelligence.py  soko_pulse.py  worker_intelligence.py
app/channels/: __init__.py  failover.py  gateway.py  health_monitor.py  registry.py  session_sync.py
app/config/: languages.json
app/core/: __init__.py  clickhouse.py  database.py  deps.py  logging.py  redis.py
app/data/: __init__.py  gamification.py  mindset_lessons.py
app/db/: __init__.py  clickhouse.py  database.py  redis.py
app/deerflow/: __init__.py  integration.py
app/evals/: __init__.py  categories.py  harness.py  runner.py
app/infrastructure/: __init__.py  cache.py  circuit_breaker.py  connection_pool.py  deployment_harness.py  metrics.py  phase_metrics.py  redis_streams.py  streams_signing.py  task_queue.py  telemetry.py
app/loops/: __init__.py  config.py  goal_loop.py  intelligence_loop.py  loan_loop.py  tithe_loop.py
app/mcp/: __init__.py  client.py  config.py  router.py  server.py
app/middleware/: __init__.py  input_validation.py  rate_limiter.py
app/models/: __init__.py  agent_models.py  buyer.py  domain.py  fl.py  goal.py  infrastructure.py  intelligence.py  intelligence_products.py  loan.py  mindset.py  refresh_token.py  schemas.py  stickiness.py  tithe.py  transaction.py  user.py  worker_features.py
app/schemas/: __init__.py  dialect_dictionary.py  federated_learning.py  formal_report.py  intelligence.py  intelligence_products.py  report.py  sync.py
app/security/: __init__.py  capability_tokens.py  pqc.py  prompt_guard.py  rate_limiter.py  secret_rotation.py  security_middleware.py  tls.py
app/services/: __init__.py  adaptive_learning.py  agents.py  anonymizer.py  auth.py  bayesian_statistics.py  buyer_auth.py  buyer_rate_limiter.py  cache.py  causal_inference.py  cloud_reasoning.py  comparison_engine.py  daily_report_scheduler.py  data_retention.py  descriptive_statistics.py  dialect_dictionary.py  dialect_training_service.py  drift_detector.py  (+53 more)
assets/: README.md
config/: biashara_agents.yaml  pgbouncer.ini  pgbouncer_userlist.txt  postgres-replica.conf
database/: Dockerfile.postgres-extended  schema.sql
deploy/: alert_rules.yml  prometheus.yml
docs/: RESEARCH_METHODOLOGY.md  degree-wiring-roadmap.md
nginx/: nginx.conf
openwa/: Dockerfile  README.md  docker-compose.yml  index.js  package.json
rust/: Cargo.toml  pyproject.toml
rust-api/: .dockerignore  Cargo.toml  Dockerfile
rust-api/src/: config.rs  error.rs  main.rs
rust-api/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs  request_id.rs
rust-api/src/models/: intelligence.rs  mod.rs  outcome.rs  transaction.rs  user.rs  worker.rs
rust-api/src/routes/: mod.rs
rust-api/src/routes/v1/: auth.rs  credit.rs  goals.rs  health.rs  intelligence.rs  mod.rs  outcomes.rs  sync.rs  transactions.rs  voice.rs  workers.rs
rust/src/: lib.rs
rust/src/crypto/: aes.rs  hashing.rs  key_mgmt.rs  mod.rs
rust/src/sync/: conflict.rs  delta.rs  mod.rs
rust/src/transaction/: mod.rs  parser.rs  processor.rs  validator.rs
rust/src/validation/: mod.rs  phone.rs  sanitize.rs
rust/src/vector/: batch.rs  cosine.rs  mod.rs
scripts/: backup-cron.sh  backup.sh  canary-deploy.sh  health.sh  init_clickhouse.py  restore.sh  rotate_secrets.py  run_clickhouse_schema.sh
src/: server.js
tests/: PhoneValidator.test.js  __init__.py  conftest.py  test_agent_factory.py  test_agent_lifecycle.py  test_biashara_loops.py  test_causal_inference.py  test_channel_failover.py  test_deerflow.py  test_econometrics.py  test_evals.py  test_event_bus.py  test_evolution_fl_fixes.py  test_game_theory.py  test_heckman_correction.py  test_intelligence_pipeline.py  test_ml_layer.py  test_pipeline.py  test_reports.py  test_research.py  test_self_improvement.py  test_sync.py
(+346 files in other folders)
