[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "angavu-intelligence-backend"
version = "1.0.0"
description = "Angavu Intelligence Backend - Cloud intelligence engine for informal worker market data"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSL-1.1"}

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "redis>=5.2,<6.0",
    "clickhouse-connect>=0.8,<1.0",
    "httpx>=0.28,<1.0",
    "numpy>=2.1,<3.0",
    "scipy>=1.14,<2.0",
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.1,<3.0",
    "pandas>=2.2,<3.0",
    "structlog>=24.4,<25.0",
    "prometheus-client>=0.21,<1.0",
    "cryptography>=43.0,<44.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "orjson>=3.10,<4.0",
    "tenacity>=9.0,<10.0",
    "anyio>=4.6,<5.0",
    "asyncer>=0.0,<1.0",
    "pgvector>=0.3,<1.0",
    "langgraph>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
    "pre-commit>=4.0,<5.0",
    "faker>=33.0,<34.0",
    "hypothesis>=6.122,<7.0",
]
rust = [
    "angavu-crypto>=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring DB",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "app"
module-name = "angavu_crypto"
