[package]
name = "angavu-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for Angavu Intelligence backend"

[lib]
name = "angavu_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
aes-gcm = "0.10"
sha2 = "0.10"
argon2 = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
base64 = "0.22"
hex = "0.4"
regex = "1"
